--- a/views/contacts.ejs
+++ b/views/contacts.ejs
@@ -60,6 +60,7 @@
             <div class="col-lg-12" id="about" align="center">
                 <p>Мы всегда рады ответить на Ваши вопросы.</p><br>
                 <p>Телефон: <span class="info">+7 (495) 649-98-19</span>
+                <p>Бесплатная линия: <span class="info">+7 (800) 301-2414</span>
                     <br>Эл. почта: <span class="info"><a href="mailto:info@okay-agency.ru?subject=Юбилейные книги">info@okay-agency.ru</a></span></p>
                 <br>
                 <p>Часы работы наших специалистов: </p>
