--- a/views/contacts.ejs
+++ b/views/contacts.ejs
@@ -59,9 +59,11 @@
         <div class="row">
             <div class="col-lg-12" id="about" align="center">
                 <p>Мы всегда рады ответить на Ваши вопросы.</p><br>
-                <p>Телефон: <span class="info">+7 (495) 649-98-19</span>
-                <p>Бесплатная линия: <span class="info">+7 (800) 301-2414</span>
-                    <br>Эл. почта: <span class="info"><a href="mailto:info@okay-agency.ru?subject=Юбилейные книги">info@okay-agency.ru</a></span></p>
+                <p>
+                   Телефон: <span class="info">+7 (495) 649-98-19</span><br>
+                   Бесплатная линия: <span class="info">+7 (800) 301-24-14</span><br>
+                   Эл. почта: <span class="info"><a href="mailto:info@okay-agency.ru?subject=Юбилейные книги">info@okay-agency.ru</a></span>
+                </p>
                 <br>
                 <p>Часы работы наших специалистов: </p>
                 <p>Понедельник–пятница - с 9 до 18
