--- a/views/contacts.ejs
+++ b/views/contacts.ejs
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Подготовка и печать подарочных изданий.  Создание художественной концепции проекта, рубрикатора, эскизов оформления, подготовка текстовых, иллюстративных материалов, обработка архивных материалов, редактура, корректура, верстка, издательский пакет, оригинал-макет.">
+    <meta name="author" content="Ivan Kalinin">
     <link rel="icon" href="img/favicon.ico">
     <title>Юбилейные книги | Контакты</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
