--- a/views/call_application.ejs
+++ b/views/call_application.ejs
@@ -8,7 +8,7 @@
     <meta name="description" content="Подготовка и печать подарочных изданий.  Создание художественной концепции проекта, рубрикатора, эскизов оформления, подготовка текстовых, иллюстративных материалов, обработка архивных материалов, редактура, корректура, верстка, издательский пакет, оригинал-макет.">
     <meta name="author" content="Ivan Kalinin">
     <link rel="icon" href="img/favicon.ico">
-    <title>Юбилейные книги | Контакты</title>
+    <title>Юбилейные книги | Позвоните мне</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
     <!--[if lt IE 9]>
@@ -38,7 +38,7 @@
                     <li><a href="/about">Наши услуги</a></li>
                     <li><a href="/contacts">Контакты</a></li>
                 </ul>
-                <p class="navbar-text navbar-right" style="color: white;">+7 (495) 649-98-19</p>
+                <p class="navbar-text navbar-right" style="color: white;">+7 (800) 301-24-14</p>
             </div>
         </div>
     </nav>
