--- a/views/contacts.ejs
+++ b/views/contacts.ejs
@@ -1,95 +1,40 @@
-<!DOCTYPE html>
-<html lang="ru">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Подготовка и печать подарочных изданий.  Создание художественной концепции проекта, рубрикатора, эскизов оформления, подготовка текстовых, иллюстративных материалов, обработка архивных материалов, редактура, корректура, верстка, издательский пакет, оригинал-макет.">
-    <meta name="author" content="Ivan Kalinin">
-    <link rel="icon" href="img/favicon.ico">
-    <title>Юбилейные книги | Контакты</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <link href="css/style.css" rel="stylesheet">
-</head>
-
-<body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle menu</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/"><img src="img/logo.png" alt="" width="95" height="50"></a>
-            </div>
-            <div id="navbar" class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="/">Главная</a></li>
-                    <li><a href="/application">Отправить заявку</a></li>
-                    <li><a href="/call_application">Позвоните мне</a></li>
-                    <li><a href="/about">Наши услуги</a></li>
-                    <li class="active"><a href="">Контакты</a></li>
-                </ul>
-                <p class="navbar-text navbar-right" style="color: white;">+7 (800) 301-24-14</p>
-            </div>
-        </div>
-    </nav>
-    <div class="carousel slide">
-        <div class="carousel-inner">
-            <div class="item active">
-                <img class="first-slide" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAcAAAADCAYAAABfwxXFAAAAYklEQVQYVwFXAKj/AZWJhf/78wMA39D0AAYlEQDrBOsAFwYRAAAXGgABoaCH/+7k+QDex/YA3/jqAPYJ9wBHOz8A9gAFAAHOzrn/3dbhANbB5QD9H/8AytXaABYQFAD0+QMAoMkncTB5GTgAAAAASUVORK5CYII=" alt="First slide">
-                <div class="container">
-                    <div class="carousel-caption">
-                        <h1>Юбилейные, ретроспективные книги,<br> подарочные издания</h1><br>
-                        <p><a class="btn btn-lg btn-primary" href="/call_application" role="button">Позвоните мне</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class="btn btn-lg btn-primary" href="/application" role="button">Отправить заявку</a></p>
-                    </div>
+<div class="carousel slide">
+    <div class="carousel-inner">
+        <div class="item active">
+            <img class="first-slide" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAcAAAADCAYAAABfwxXFAAAAYklEQVQYVwFXAKj/AZWJhf/78wMA39D0AAYlEQDrBOsAFwYRAAAXGgABoaCH/+7k+QDex/YA3/jqAPYJ9wBHOz8A9gAFAAHOzrn/3dbhANbB5QD9H/8AytXaABYQFAD0+QMAoMkncTB5GTgAAAAASUVORK5CYII=" alt="First slide">
+            <div class="container">
+                <div class="carousel-caption">
+                    <h1>Юбилейные, ретроспективные книги,<br> подарочные издания</h1>
+                    <br>
+                    <p><a class="btn btn-lg btn-primary" href="/call_application" role="button">Позвоните мне</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class="btn btn-lg btn-primary" href="/application" role="button">Отправить заявку</a></p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container marketing">
-        <div class="row">
-            <div class="col-lg-12" id="about" align="center">
-                <p>Мы всегда рады ответить на Ваши вопросы.</p><br>
-                <p>
-                   Телефон: <span class="info">+7 (495) 649-98-19</span><br>
-                   Бесплатная линия: <span class="info">+7 (800) 301-24-14</span><br>
-                   Эл. почта: <span class="info"><a href="mailto:info@okay-agency.ru?subject=Юбилейные книги">info@okay-agency.ru</a></span>
-                </p>
+</div>
+<div class="container marketing">
+    <div class="row">
+        <div class="col-lg-12" id="about" align="center">
+            <p>Мы всегда рады ответить на Ваши вопросы.</p>
+            <br>
+            <p>
+                Телефон: <span class="info">+7 (495) 649-98-19</span>
+                <br> Бесплатная линия: <span class="info">+7 (800) 301-24-14</span>
+                <br> Эл. почта: <span class="info"><a href="mailto:info@okay-agency.ru?subject=Юбилейные книги">info@okay-agency.ru</a></span>
+            </p>
+            <br>
+            <p>Часы работы наших специалистов: </p>
+            <p>Понедельник–пятница - с 9 до 18
+                <br> Суббота, воскресенье - выходные</p>
+            <br>
+            <p>Заказы через сайт принимаются круглосуточно.</p>
+            <p>Реквизиты:
                 <br>
-                <p>Часы работы наших специалистов: </p>
-                <p>Понедельник–пятница - с 9 до 18
-                    <br> Суббота, воскресенье - выходные</p>
-                <br>
-                <p>Заказы через сайт принимаются круглосуточно.</p>
-                <p>Реквизиты:
-                    <br>
-                    <div class="info">ООО «Агентство Окей» / Okay Agency LLC</div>
-                    <div class="info">ИНН 7727546660</div>
-                    <div class="info">КПП 772101001</div>
-                    <div class="info">ОГРН 1057747363079</div>
-                </p>
-            </div>
+                <div class="info">ООО «Агентство Окей» / Okay Agency LLC</div>
+                <div class="info">ИНН 7727546660</div>
+                <div class="info">КПП 772101001</div>
+                <div class="info">ОГРН 1057747363079</div>
+            </p>
         </div>
-        <hr class="featurette-divider">
-        <footer>
-            <p class="pull-right"><a href="#"><b>Наверх</b></a></p>
-            <p>&copy; 2017 Okay Agency LLC &middot;</p>
-        </footer>
     </div>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/ie10-viewport-bug-workaround.js"></script>
-    <!-- Yandex.Metrika counter --> <script type="text/javascript"> (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter39997390 = new Ya.Metrika({ id:39997390, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, trackHash:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/39997390" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
-    
-</body>
-
-</html>
+</div>
