--- a/views/_template.ejs
+++ b/views/_template.ejs
@@ -48,7 +48,7 @@
                     <li<%- activate_item('about') %>><a href="/about">Наши услуги</a></li>
                     <li<%- activate_item('contacts') %>><a href="/contacts">Контакты</a></li>
                 </ul>
-                <p class="navbar-text navbar-right hidden-sm" style="color: white;">+7 (800) 301-24-14<span class="hidden-md" style="margin-left: 20px">+7 (495) 649-98-19</span></p>
+                <p class="navbar-text navbar-right hidden-sm" style="color: white;">+7 (495) 649-98-19</p>
             </div>
         </div>
     </nav>
